@@ -15,7 +15,6 @@
 </variable>
 
 <!-- change the type of a variable -->
-
 <variable name="precipitation_amount" type="short">
 	<attribute name="_FillValue" value="-32767" type="short" />
 	<attribute name="scale_factor" value="0.001" type="float" />
@@ -27,6 +26,12 @@
 
 <!-- rename a dimension -->
 <dimension name="x" newname="x_c" />
+
+<!--  change units from m to km-->
+<!--  make sure to put the type to change the data, too!!! -->
+<variable name="x" type="double">
+	<attribute name="units" value="km" type="string" />
+</variable>
 
 <!-- rename a attribute -->
 <attribute name="min_time" newname="minimum_time" />
