@@ -18,3 +18,4 @@ gmon.out
 testUnconf.nc
 felt2netcdf2.cfg
 flth00.dat
+testUnits
