@@ -7,14 +7,15 @@ AM_CPPFLAGS = -DTOP_SRCDIR=\"$(top_srcdir)\" -I$(top_srcdir)/src -I$(top_srcdir)
 AM_CXXFLAGS = -Wall -pedantic 
 AM_CFLAGS = -std=c99 -Wall -pedantic
 
+if HAVE_UDUNITS
+  LDADD += ${UDUNITS_LDFLAGS} ${UDUNITS_LIBS}
+  CC_TESTS += testUnits
+endif
 if HAVE_MILIB
   LDADD += ${milib_LIBS}
   CC_TESTS += testFeltReader
   NETCDF_MI_SH_TESTS = testFeltReadNetCDFWrite.sh testNetCDFReadWrite.sh
   NETCDF_MI_TESTS = testNetcdfWriter testExtractor testInterpolator
-endif
-if HAVE_UDUNITS
-  LDADD += ${UDUNITS_LDFLAGS} ${UDUNITS_LIBS}
 endif
 if HAVE_NETCDF
   LDADD += ${NETCDF_LDFLAGS} ${NETCDF_LIBS}
@@ -34,3 +35,4 @@ testFeltReader_SOURCES = testFeltReader.cc
 testNetcdfWriter_SOURCES = testNetcdfWriter.cc
 testExtractor_SOURCES = testExtractor.cc
 testInterpolator_SOURCES = testInterpolator.cc
+testUnits_SOURCES = testUnits.cc
